Changelog
=========

1.34 - Unreleased
-----------------

* Fix unpinning of eggs with a name containing characters not in [^A-Za-z0-9.]
  This means that to correctly unpin pkg.foo_bar we have to delete
  ``pkg.foo-bar`` from the buildout ``[version]`` section.
  [ale-rt (Alessandro Pisa)]


1.33 - 2015-05-25
-----------------

* Fix git-clone-depth global option, it needs to be kept as a string and not
  converted to a number.
  [gforcada, fschulze]


1.32 - 2015-05-23
-----------------

* Add git-clone-depth global option and depth per source option to specify on
  git clones how much history wants to be cloned.
  [gforcada (Gil Forcada)]

* Add plugin interface for adding commands using entry points.
  [fschulze]

* Raise an exception if the sources section references a missing section.
  [icemac (Michael Howitz)]


1.31 - 2014-10-29
-----------------

* Fixed submodule matching for some git versions.
  [jod (Josip Delic), fschulze]

* Added compat.py for Python 3.
  [jod (Josip Delic)]

* More info when svn cannot switch because of dirty checkout.
  [gotcha]

* Git: try to switch to branch master when no branch has been
  specified.  Do not give an error in this case when master is not
  there.  Fixes issue #125
  [maurits]


1.30 - 2014-03-14
-----------------

* Fix regression from 1.29.
  [Trii (Josh Johnston)]


1.29 - 2014-03-14
-----------------

* Preserve order of eggs specified in ``develop`` option.
  [anjos (André Anjos)]


1.28 - 2014-01-23
-----------------

* Mercurial now checks if working copy is ahead of remote branch.
  [rafaelbco]

1.27 - 2014-01-10
-----------------

* Fix encoding issues during installation if the default encoding isn't
  properly set. Fixes issue #127
  [fschulze, jajadinimueter]

* Fix error message when listing of git branches fails. Fixes issue #124
  [toutpt (JeanMichel FRANCOIS), fschulze]

1.26 - 2013-09-10
-----------------

* Fixed branch option for git 1.6.0 until and including 1.6.2.
  Fixes issue #117.