@@ -161,6 +161,25 @@ class GitTests(JailSetup):
         CmdUpdate(develop)(develop.parser.parse_args(['up', 'egg']))
         assert set(os.listdir(os.path.join(src, 'egg'))) == set(('.git', 'bar', 'foo'))
 
+        # Switch to specific revision, then switch back to master branch.
+        develop.sources = {
+            'egg': Source(
+                kind='git',
+                name='egg',
+                rev=rev,
+                url='%s' % repository,
+                path=os.path.join(src, 'egg'))}
+        CmdUpdate(develop)(develop.parser.parse_args(['up', 'egg']))
+        assert set(os.listdir(os.path.join(src, 'egg'))) == set(('.git', 'foo', 'foo2'))
+        develop.sources = {
+            'egg': Source(
+                kind='git',
+                name='egg',
+                url='%s' % repository,
+                path=os.path.join(src, 'egg'))}
+        CmdUpdate(develop)(develop.parser.parse_args(['up', 'egg']))
+        assert set(os.listdir(os.path.join(src, 'egg'))) == set(('.git', 'bar', 'foo'))
+
         CmdStatus(develop)(develop.parser.parse_args(['status']))
 
         # we can't use both rev and branch
